Added logsearch_curator resource pool

--- a/templates/logsearch-jobs.yml
+++ b/templates/logsearch-jobs.yml
@@ -139,7 +139,7 @@ jobs:
   release: logsearch
   templates:
   - name: curator
-  resource_pool: logsearch
+  resource_pool: logsearch_curator
   networks:
   - name: default
     default:
